fixed z-index issues & horizonal scroll in desktop

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -737,7 +737,8 @@ header nav .current-page {
 
   .full-width-content {
     width: 70vw;
-    margin: 0 4ch 0 auto;
+    margin: 0 auto 0 0;
+    padding-right: 4ch;
   }
 
   footer {
@@ -778,7 +779,7 @@ header nav .current-page {
     grid-template-columns: 1fr 70vw 4ch;
   }
   .blog-post .post-header .header-img {
-    z-index: -1000;
+    z-index: 1;
     grid-row: 1/8;
     grid-column: 1/4;
     display: grid;
@@ -823,6 +824,7 @@ header nav .current-page {
     text-align: right;
   }
   .blog-post .post-header h3 {
+    z-index: 2;
     grid-row: 1/2;
     grid-column: 1/3;
     min-width: fit-content;
@@ -833,6 +835,7 @@ header nav .current-page {
     background: #2aa198ea;
   }
   .blog-post .post-header .display-url {
+    z-index: 2;
     grid-row: 4/6;
     grid-column: 1/3;
     height: fit-content;
@@ -850,7 +853,7 @@ header nav .current-page {
   }
   .blog-post .post-content {
     grid-row: 8/17;
-    grid-column: 1/4;
+    grid-column: 2/3;
   }
   .blog-post .content-img {
     width: 100%;
@@ -858,6 +861,7 @@ header nav .current-page {
   .blog-post .content-img img {
     height: 100%;
     max-width: fit-content;
+    max-width: -moz-fit-content;
     object-fit: contain;
   }
 }
@@ -908,9 +912,8 @@ header nav .current-page {
     grid-template-columns: 1fr 70vw 1fr;
   }
   .blog-post .post-header .header-img {
-    z-index: -1000;
+    z-index: 1;
     grid-row: 1/15;
-    width: 100vw;
     grid-template-columns: 1fr 70vw 1fr;
     margin: 0;
   }
@@ -927,6 +930,7 @@ header nav .current-page {
     grid-column: 3/4;
     grid-template-rows: repeat(6, 1.6666rem) 6.6664rem repeat(8, 1.6666rem) 1fr;
     grid-template-columns: 1fr;
+    line-height: 1.5em;
   }
   .blog-post .post-header .header-img figcaption div {
     background: #073642;
@@ -953,13 +957,16 @@ header nav .current-page {
     padding: 2ch;
   }
   .blog-post .post-header .author {
+    z-index: 2;
     grid-row: 8/12;
   }
   .blog-post .post-header .post-date {
+    z-index: 2;
     grid-row: 12/16;
     grid-column: 1/2;
   }
   .blog-post .post-content {
+    z-index: 5;
     grid-row: 8/17;
     grid-column: 1/4;
     background: #002b36cc;
@@ -972,6 +979,7 @@ header nav .current-page {
 
   .full-width-content {
     margin: 0 auto;
+    padding: 0;
   }
   .full-width-content ~ h4 {
     max-width: 70vw;
