--- a/src/css/partials/_media-queries.scss
+++ b/src/css/partials/_media-queries.scss
@@ -73,7 +73,8 @@ $breakpoint-desktop: 900px;
   }
   .full-width-content{
     width: 70vw;
-    margin:0 4ch 0 auto;
+    margin:0 auto 0 0;
+    padding-right:4ch;
   }
 
   footer{
@@ -94,6 +95,7 @@ $breakpoint-desktop: 900px;
     }
   }
 
+  //Blog
   .blog-post{
     display:grid;
     grid-template-rows:repeat(6,1.6666rem) 6.6664rem repeat(8, 1.6666rem) 1fr;
@@ -111,8 +113,7 @@ $breakpoint-desktop: 900px;
       grid-template-columns:1fr 70vw 4ch;
 
       .header-img{
-        // position:relative;
-        z-index:-1000;
+        z-index:1;
         grid-row: 1/8;
         grid-column: 1/4;
       
@@ -159,6 +160,7 @@ $breakpoint-desktop: 900px;
         }
       }
       h3{
+        z-index:2;
         grid-row: 1/2;
         grid-column:1/3;
         min-width:fit-content;
@@ -169,6 +171,7 @@ $breakpoint-desktop: 900px;
         background:$cyan-t;
       }
       .display-url{
+        z-index:2;
         grid-row: 4/6;
         grid-column:1/3;
         height: fit-content;
@@ -187,21 +190,23 @@ $breakpoint-desktop: 900px;
     }
     .post-content{
       grid-row:8/17;
-      grid-column:1/4;
+      grid-column:2/3;
     }
     .content-img{
       width:100%;
       img{
         height:100%;
         max-width:fit-content;
+        max-width:-moz-fit-content;
         object-fit:contain;
       }
-      // height:inherit;
     }
   }
 
 }//end media query Tablet
 
+
+//Media Query for Desktop respoinisveness
 @media screen and (min-width:$breakpoint-desktop){
 
   //extend h2 for better visual heirachy.
@@ -245,7 +250,7 @@ $breakpoint-desktop: 900px;
     }
   }
 
-  
+  //Blogs
   .blog-post{
     grid-template-columns:1fr 70vw 1fr;
 
@@ -254,10 +259,9 @@ $breakpoint-desktop: 900px;
       grid-template-columns:1fr 70vw 1fr;
 
       .header-img{
-        z-index:-1000;
+        z-index:1;
         grid-row: 1/15;
       
-        width:100vw;
         grid-template-columns: 1fr 70vw 1fr;
         margin:0;
         img{
@@ -273,6 +277,7 @@ $breakpoint-desktop: 900px;
           grid-column: 3/4;
           grid-template-rows:repeat(6,1.6666rem) 6.6664rem repeat(8, 1.6666rem) 1fr;
           grid-template-columns:1fr;
+          line-height: 1.5em;
           div{
             &.img-caption{
               align-self:start;
@@ -299,16 +304,19 @@ $breakpoint-desktop: 900px;
        padding:2ch;
       }
       .author{
+        z-index:2;
         @extend %author;
         grid-row:8/12;
       }
       .post-date{
+        z-index:2;
         @extend %author;
         grid-row: 12/16;
         grid-column:1/2;
       }
     }
     .post-content{
+      z-index:5;
       grid-row:8/17;
       grid-column:1/4;
       background:$base03-t;
@@ -322,6 +330,7 @@ $breakpoint-desktop: 900px;
   //move content back into centre of screen for easy reading.
   .full-width-content{
     margin:0 auto;
+    padding:0;
     &~h4{
       max-width:70vw;
     }
